...
//    
//    var titleLabel: XCUIElement {
//        return app.staticTexts["PhotosCollectionViewController.title"]
//    }
//    
//    var previousButton: XCUIElement {
//        return app.buttons["PhotosCollectionViewController.PreviousSolButton"]
//    }
//
//    var nextButton: XCUIElement {
//        return app.buttons["PhotosCollectionViewController.NextSolButton"]
//    }
//    
//    var imageView: XCUIElement {
//        return app.images["PhotosCollectionViewController.imageView"]
//    }
//    
//}

