...
                            <constraint firstItem="33C-GV-pNd" firstAttribute="top" secondItem="jW9-Pv-wBy" secondAttribute="bottom" id="bUE-tK-SGH"/>
                            <constraint firstItem="Ojm-q3-djU" firstAttribute="top" secondItem="33C-GV-pNd" secondAttribute="bottom" constant="226" id="fsC-Xg-4a4"/>
                            <constraint firstItem="33C-GV-pNd" firstAttribute="leading" secondItem="26Z-Jb-jmZ" secondAttribute="leading" id="ku0-go-1Ac"/>
                            <constraint firstItem="Ojm-q3-djU" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MyK-rk-mFe" secondAttribute="bottom" constant="10" id="ymg-tv-o1t"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="4ed-4v-HFq"/>
                    <connections>
                        <outlet property="cameraLabel" destination="9gd-7b-dyz" id="dG4-JQ-QmJ"/>
                        <outlet property="detailLabel" destination="PDa-7E-DHh" id="ge4-Ld-wmV"/>
                        <outlet property="imageView" destination="33C-GV-pNd" id="GKy-q9-3KS"/>
                    </connections>
                </viewController>
...
